@@ -4,6 +4,8 @@ package com.trans.controllers;
 import com.trans.model.Cargo;
 import com.trans.model.Roles;
 import com.trans.model.User;
+import com.trans.service.CargoService;
+import com.trans.service.TransportService;
 import com.trans.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.Authentication;
@@ -22,17 +24,23 @@ import java.time.format.DateTimeFormatter;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashSet;
+import java.util.Set;
 
 @Controller
 public class MainController {
 
-    public UserService userService;
-    @Autowired
-    private PasswordEncoder passwordEncoder;
+    private final UserService userService;
+    private final CargoService cargoService;
+    private final TransportService transportService;
+    private final PasswordEncoder passwordEncoder;
 
-    @Autowired
-    public MainController(UserService userService) {
+
+    public MainController(UserService userService, CargoService cargoService,
+                          TransportService transportService, PasswordEncoder passwordEncoder) {
         this.userService = userService;
+        this.cargoService = cargoService;
+        this.transportService = transportService;
+        this.passwordEncoder = passwordEncoder;
     }
 
     @GetMapping("/registration")
@@ -40,19 +48,32 @@ public class MainController {
         model.setViewName("pages/registration");
         return model;
     }
-
+    @GetMapping("/cargo/list")
+    protected ModelAndView listCargoAsk() {
+        ModelAndView modelAndView = new ModelAndView();
+        modelAndView.addObject("cargoListAsk",cargoService.findAllCargoAsk());
+        modelAndView.setViewName("pages/cargo/list_all_cargo");
+        return modelAndView;
+    }
+    @GetMapping("/transport/list")
+    protected ModelAndView listTransportAsk() {
+        ModelAndView modelAndView = new ModelAndView();
+        modelAndView.addObject("transportList", transportService.findAll());
+        modelAndView.setViewName("pages/transport/list_all_transport");
+        return modelAndView;
+    }
     @PostMapping("/registration")
     public ModelAndView add(@ModelAttribute User user, RedirectAttributes attributes) {
         User userByBD = userService.findByEmail(user.getEmail());
         ModelAndView modelAndView = new ModelAndView();
         if (userByBD != null) {
-            attributes.addFlashAttribute("message", "User exists!");
-            modelAndView.setViewName("/registration");
+            modelAndView.addObject("message", "User exists!");
+            modelAndView.setViewName("pages/registration");
             return modelAndView;
 
         } else {
             user.setPassword(passwordEncoder.encode(user.getPassword()));
-            user.setRoles(new HashSet<>(Collections.singleton(Roles.USER)));
+            user.setRoles(Set.of(Roles.USER));
             userService.save(user);
             modelAndView.setViewName("redirect:/login}");
             return modelAndView;
@@ -64,36 +85,20 @@ public class MainController {
             modelAndView.setViewName("pages/login");
         return modelAndView;
     }
+    @PostMapping("/login")
+    public ModelAndView loginPost(ModelAndView modelAndView, Authentication authentication) {
+            modelAndView.setViewName("pages/login");
+        return modelAndView;
+    }
     @GetMapping("/idTest")
     public ModelAndView loginG1et(ModelAndView modelAndView) {
             modelAndView.setViewName("pages/login");
         return modelAndView;
     }
 
-
-/*    @PostMapping("/login")
-    public RedirectView loginPost(@RequestParam("username") String email, @RequestParam String password, RedirectAttributes attributes) {
-        User user = userService.findByEmailAndPassword(email, password);
-        if (user != null) {
-            attributes.addAttribute("id", user.getId());
-            return new RedirectView("/user/profile/{id}", true);
-        } else {
-            attributes.addFlashAttribute("error_message", "This username and password combination was not found.");
-            //attributes.addAttribute("message","This username and password combination was not found.");
-            return new RedirectView("/login", true);
-        }
-    }*/
-
     @GetMapping("/test")
-    public ModelAndView test(ModelAndView modelAndView, Principal principal) {
-//        modelAndView.addObject("principal_test",principal);
-        modelAndView.setViewName("pages/test");
-        return modelAndView;
-    }
-
-    @PostMapping("/test")
-    public ModelAndView test1(ModelAndView modelAndView) {
-        modelAndView.setViewName("pages/test");
+    public ModelAndView test(ModelAndView modelAndView) {
+        modelAndView.setViewName("redirect:/");
         return modelAndView;
     }
 
